--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -1,20 +1,21 @@
+#
+# Copyright (c) 2016 Dog Hunter AG. All right reserved.
+#
+# This is free software, licensed under the GNU General Public License v2.
+# See /LICENSE for more information.
+#
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ajtcl-services
-PKG_VERSION:=15.04
+PKG_VERSION:=16.04
 PKG_RELEASE:=1
-PKG_MD5SUM:=cf83d93511ed1dd21c285fe7a56865e
-
-# PKG_SOURCE_PROTO:=git
-# PKG_REVISION:=17d0de166022b5a56f9e09a7faffbf40ee241080
 
 PKG_SOURCE:=base_tcl-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/services/base_tcl.git/snapshot/
-PKG_BUILD_DIR:=$(BUILD_DIR)/base_tcl-$(PKG_VERSION)
+PKG_MD5SUM:=3dfc63f9b256f5ed7b8d3a47d90f68b5
 
-# PKG_SOURCE_VERSION:=$(PKG_REVISION)
-# PKG_SOURCE_URL:=https://git.allseenalliance.org/gerrit/services/base_tcl.git
-# PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_BUILD_DIR:=$(BUILD_DIR)/base_tcl-$(PKG_VERSION)
 
 # SCons supports parallel builds but does not support make's jobserver
 PKG_BUILD_PARALLEL:=$(if $(CONFIG_PKG_BUILD_USE_JOBSERVER),0,1)
