--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -23,6 +23,10 @@ PKG_BUILD_PARALLEL:=$(if $(CONFIG_PKG_BUILD_USE_JOBSERVER),0,1)
 PKG_CONFIG_DEPENDS:= \
 	CONFIG_DEBUG
 
+PKG_MAINTAINER:=
+PKG_LICENSE:=Custom
+PKG_LICENSE_FILES:=
+
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)/Default
