--- a/duktape/Makefile
+++ b/duktape/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) Dog Hunter AG 2014
+# Copyright (C) Dog Hunter AG 2014-2016
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -8,17 +8,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=duktape
-PKG_VERSION:=1.2.4
+PKG_VERSION:=1.5.0
 PKG_RELEASE:=1
-PKG_MD5SUM:=a103ddfd626b928001c2d383d7b30cdb
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-# PKG_SOURCE:=$(PKG_NAME)-master.tar.xz
 PKG_SOURCE_URL:=http://duktape.org/
-# PKG_SOURCE_URL:=http://duktape.org/snapshots/
+PKG_MD5SUM:=6fa1783b2eddaab4ab815cd894624fba
 
 PKG_FILE:="$(STAGING_DIR)/pkginfo/libc.provides"
-PKG_CAT=`cat $(PKG_FILE) | grep libm.so.6` 
+PKG_CAT=`cat $(PKG_FILE) | grep libm.so.6`
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -61,7 +59,6 @@ endef
 
 define Package/duktape/install
 	$(INSTALL_DIR) $(1)/usr/bin/
-	
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/duk $(1)/usr/bin/
 endef
 
