--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ajtcl-services
-PKG_VERSION:=15.04
+PKG_VERSION:=16.04
 PKG_RELEASE:=1
 
 PKG_SOURCE:=base_tcl-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/services/base_tcl.git/snapshot/
-PKG_MD5SUM:=8cf83d93511ed1dd21c285fe7a56865e
+PKG_MD5SUM:=3dfc63f9b256f5ed7b8d3a47d90f68b5
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/base_tcl-$(PKG_VERSION)
 
@@ -73,20 +73,14 @@ endef
 TARGET_CFLAGS+=-I$(STAGING_DIR)/usr/include/ajtcl
 
 define Build/Compile
-	TARGET_CC_NOCACHE="$(TARGET_CC_NOCACHE)" \
-	TARGET_CXX_NOCACHE="$(TARGET_CXX_NOCACHE)" \
-	TARGET_LINK="$(TARGET_CC_NOCACHE)" \
-	STAGING_DIR="$(STAGING_DIR)" \
-	TARGET_PATH="$(TARGET_PATH)" \
-	TARGET_CFLAGS="$(TARGET_CFLAGS)" \
-	EXTRA_CFLAGS="$(EXTRA_CFLAGS)" \
-	TARGET_CPPFLAGS="$(TARGET_CPPFLAGS)" \
-	TARGET_LINKFLAGS="$(TARGET_LINKFLAGS)" \
-	TARGET_LDFLAGS="$(TARGET_LDFLAGS)" \
-	TARGET_PATH="$(PATH)" \
+	CROSS_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(FPIC) $(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS)" \
+	CROSS_LINKFLAGS="$(TARGET_LINKFLAGS) $(TARGET_LDFLAGS)" \
+	CROSS_PATH=$(TARGET_PATH) \
+	CROSS_PREFIX=$(TARGET_CC:gcc=) \
 	scons -C $(PKG_BUILD_DIR) \
-		-f SConstruct.openwrt \
 		$(PKG_JOBS) \
+		WS=off \
+		TARG=linux \
 		"VARIANT=$(ALLJOYN_BUILD_VARIANT)"
 endef
 
