--- a/ajtcl/Makefile
+++ b/ajtcl/Makefile
@@ -28,6 +28,7 @@ PKG_LICENSE:=Custom
 PKG_LICENSE_FILES:=
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/scons.mk
 
 define Package/ajtcl/Default
   SECTION:=net
@@ -70,6 +71,7 @@ define Build/Configure/Default
 endef
 
 define Build/Compile
+	$(SCONS_VARS) \
 	CROSS_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(FPIC) $(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS)" \
 	CROSS_LINKFLAGS="$(TARGET_LINKFLAGS) $(TARGET_LDFLAGS)" \
 	CROSS_PATH=$(TARGET_PATH) \
