--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -75,6 +75,17 @@ TARGET_CFLAGS+=-I$(STAGING_DIR)/usr/include/ajtcl
 
 define Build/Compile
 	$(SCONS_VARS) \
+	TARGET_CC_NOCACHE="$(TARGET_CC_NOCACHE)" \
+	TARGET_CXX_NOCACHE="$(TARGET_CXX_NOCACHE)" \
+	TARGET_LINK="$(TARGET_CC_NOCACHE)" \
+	STAGING_DIR="$(STAGING_DIR)" \
+	TARGET_PATH="$(TARGET_PATH)" \
+	TARGET_CFLAGS="$(TARGET_CFLAGS)" \
+	EXTRA_CFLAGS="$(EXTRA_CFLAGS)" \
+	TARGET_CPPFLAGS="$(TARGET_CPPFLAGS)" \
+	TARGET_LINKFLAGS="$(TARGET_LINKFLAGS)" \
+	TARGET_LDFLAGS="$(TARGET_LDFLAGS)" \
+	TARGET_PATH="$(PATH)" \
 	scons -C $(PKG_BUILD_DIR) \
 		-f SConstruct.openwrt \
 		$(PKG_JOBS) \
