--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -88,6 +88,16 @@ define Build/Compile
 		BR=off \
 		BT=off \
 		ICE=off \
+		"TARGET_CC=$$(TARGET_CC)" \
+		"TARGET_CXX=$$(TARGET_CXX)" \
+		"TARGET_CFLAGS=$$(TARGET_CFLAGS)" \
+		"TARGET_CPPFLAGS=$$(TARGET_CPPFLAGS)" \
+		"TARGET_PATH=$$(TARGET_PATH)" \
+		"TARGET_LINKFLAGS=$$(TARGET_LDFLAGS)" \
+		"TARGET_LINK=$$(TARGET_CC)" \
+		"TARGET_AR=$$(TARGET_AR)" \
+		"TARGET_RANLIB=$$(TARGET_RANLIB)" \
+		"STAGING_DIR=$$(STAGING_DIR)" \
 		"VARIANT=$(ALLJOYN_BUILD_VARIANT)"
 endef
 
