--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -75,12 +75,21 @@ TARGET_CFLAGS+=-I$(STAGING_DIR)/usr/include/ajtcl
 
 define Build/Compile
 	$(SCONS_VARS) \
-	$(MAKE_VARS) \
-	$(MAKE_FLAGS) \
 	CROSS_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(FPIC) $(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS)" \
 	CROSS_LINKFLAGS="$(TARGET_LINKFLAGS) $(TARGET_LDFLAGS)" \
 	CROSS_PATH=$(TARGET_PATH) \
 	CROSS_PREFIX=$(TARGET_CC:gcc=) \
+	TARGET_CC_NOCACHE=$(TARGET_CC_NOCACHE) \
+	TARGET_CXX_NOCACHE=$(TARGET_CXX_NOCACHE) \
+	TARGET_LINK=$(TARGET_CC_NOCACHE) \
+	STAGING_DIR=$(STAGING_DIR) \
+	TARGET_PATH=$(TARGET_PATH) \
+	TARGET_CFLAGS=$(TARGET_CFLAGS) \
+	EXTRA_CFLAGS=$(EXTRA_CFLAGS) \
+	TARGET_CPPFLAGS=$(TARGET_CPPFLAGS) \
+	EXTRA_CPPFLAGS=$(EXTRA_CPPFLAGS) \
+	TARGET_LINKFLAGS=$(TARGET_LINKFLAGS) \
+	TARGET_LDFLAGS=$(TARGET_LDFLAGS) \
 	scons -C $(PKG_BUILD_DIR) \
 		-f SConstruct.openwrt \
 		prefix=/usr \
