--- a/duktape/Makefile
+++ b/duktape/Makefile
@@ -48,7 +48,7 @@ endef
 
 define Build/Compile
 	CC=$(TARGET_CC) \
-	CXX=$(TARGET_CXX) \
+	CCOPTS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(TARGET_LINKFLAGS) $(TARGET_LDFLAGS)" \
 	$(MAKE) -C $(PKG_BUILD_DIR) DESTDIR="$(PKG_INSTALL_DIR)"
 endef
 
