--- a/ajtcl/Makefile
+++ b/ajtcl/Makefile
@@ -66,8 +66,7 @@ else
   ALLJOYN_BUILD_VARIANT:=release
 endif
 
-define Build/Configure/Default
-	# Override default to do nothing
+define Build/Configure
 endef
 
 define Build/Compile
