--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -67,8 +67,7 @@ else
   ALLJOYN_BUILD_VARIANT:=release
 endif
 
-define Build/Configure/Default
-	# Override default to do nothing
+define Build/Configure
 endef
 
 TARGET_CFLAGS+=-I$(STAGING_DIR)/usr/include/ajtcl
