azure-iot-sdks: test

--- a/azure-iot-sdks/Makefile
+++ b/azure-iot-sdks/Makefile
@@ -43,6 +43,10 @@ endef
 
 CMAKE_OPTIONS += \
 	-DIN_OPENWRT=1 \
+	TOOLCHAIN_DIR="$(TOOLCHAIN_DIR)" \
+	TARGET_CPPFLAGS="$(TARGET_CPPFLAGS)" \
+	TARGET_CFLAGS="$(TARGET_CFLAGS) -DIN_OPENWRT" \
+	TARGET_LDFLAGS="$(TARGET_LDFLAGS)" \
 	-Duse_amqp:bool=ON \
 	-Duse_http:bool=ON \
 	-Duse_mqtt:bool=OFF \
