--- a/softethervpn/Makefile
+++ b/softethervpn/Makefile
@@ -93,7 +93,7 @@ endef
 
 define Host/Compile
 	$(MAKE) $(HOST_JOBS) -C $(HOST_BUILD_DIR) \
-		$(HOST_MAKE_FLAGS) -f ../makefiles/linux_32bit.mak \
+		$(HOST_MAKE_FLAGS) -f src/makefiles/linux_32bit.mak \
 		src/bin/BuiltHamcoreFiles/unix/hamcore.se2
 endef
 
