--- a/ajtcl-alljoynjs/Makefile
+++ b/ajtcl-alljoynjs/Makefile
@@ -86,6 +86,16 @@ define Build/Compile
 		ICE=off \
 		POLICYDB=on \
 		WS=off \
+		"TARGET_CC=$$(TARGET_CC)" \
+		"TARGET_CXX=$$(TARGET_CXX)" \
+		"TARGET_CFLAGS=$$(TARGET_CFLAGS)" \
+		"TARGET_CPPFLAGS=$$(TARGET_CPPFLAGS)" \
+		"TARGET_PATH=$$(TARGET_PATH)" \
+		"TARGET_LINKFLAGS=$$(TARGET_LDFLAGS)" \
+		"TARGET_LINK=$$(TARGET_CC)" \
+		"TARGET_AR=$$(TARGET_AR)" \
+		"TARGET_RANLIB=$$(TARGET_RANLIB)" \
+		"STAGING_DIR=$$(STAGING_DIR)" \
 		"VARIANT=$(ALLJOYN_BUILD_VARIANT)"
 endef
 
