--- a/ajtcl-services/Makefile
+++ b/ajtcl-services/Makefile
@@ -15,7 +15,7 @@ PKG_SOURCE:=alljoyn-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://git.allseenalliance.org/cgit/core/alljoyn.git/snapshot/
 PKG_MD5SUM:=3cd25584c322e3ef6a9802b1b719a959
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/base_tcl-$(PKG_VERSION)
+PKG_BUILD_DIR:=$(BUILD_DIR)/alljoyn-$(PKG_VERSION)
 
 # SCons supports parallel builds but does not support make's jobserver
 PKG_BUILD_PARALLEL:=$(if $(CONFIG_PKG_BUILD_USE_JOBSERVER),0,1)
