--- a/mg/Makefile
+++ b/mg/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mg
-PKG_VERSION:=20160725
+PKG_VERSION:=20160815
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://devio.us/~bcallah/mg
-PKG_MD5SUM:=65fbd41cc59099e06acc92c6baa42da4
+PKG_SOURCE_URL:=https://devio.us/~bcallah/mg/
+PKG_MD5SUM:=520d555b85d04dd5025c0c8716dc0265
 
 PKG_MAINTAINER:=
 PKG_LICENSE:=ISC BSD
